Fix context menu options not showing on AppV2 journal sheets. Fix modified dnd5e css collision. Fix contents in shop table not being centered in AppV2 journal sheets.

--- a/styles/module.css
+++ b/styles/module.css
@@ -62,7 +62,7 @@
   }
 
   /* Quest */
-  &.quest {
+  &.quest-page {
     .dashed .name {
       text-decoration: line-through;
     }
@@ -86,9 +86,13 @@
   }
 
   /* Shop */
-  &.shop {
+  &.shop-page {
     & table .center {
       text-align: center;
+    }
+
+    & table .center > * {
+      place-self: center;
     }
 
     & table .price .stack {
